fix main nav header spacing
3px border wasn't accounted for in height of some child elements of the header, which is meant to be 80px tall
but was getting pushed to 83 because of these children
I adjusted the child's height & the position of .main-navigation and this a) makes the alerts section flush
with the bottom of the header & b) add a bit of space to the top of the page now

--- a/libraries/libraries/static/scss/components/header/_main-navigation.scss
+++ b/libraries/libraries/static/scss/components/header/_main-navigation.scss
@@ -2,6 +2,7 @@
 // Main website navigation in the header.
 // On mobile it is a dropdown menu.
 // ========================================
+$mainnav-border-bottom: 3px;
 
 .main-navigation {
     background: $white;
@@ -15,7 +16,7 @@
         float: right;
         margin-right: 20px;
         position: relative;
-        top: -4px; // border offset
+        top: -1px; // border offset
         width: auto;
     }
 }
@@ -45,7 +46,7 @@
     }
 
     @include respond($break-medium) {
-        border-bottom: 3px solid transparent;
+        border-bottom: $mainnav-border-bottom solid transparent;
         border-left: 0;
         display: inline-block;
         padding: 0 13px;
@@ -116,7 +117,7 @@
 
     @include respond($break-medium) {
         font-size: 16px;
-        height: $header-height-large;
+        height: $header-height-large - $mainnav-border-bottom;
         line-height: $header-height-large + 10;
         padding: 0;
     }
